--- a/src/components/searchresult/jobitem/jobItem.module.css
+++ b/src/components/searchresult/jobitem/jobItem.module.css
@@ -70,7 +70,7 @@
   padding: 0.5rem 1.6rem !important;
   font-size: 1.3rem !important;
 
-  background-image: url("../../../assets/save_icon.svg");
+  background-image: url("../../../assets/svg/save_icon.svg");
   background-position: center left 1.2rem;
   background-repeat: no-repeat;
   padding-left: 3.2rem !important;
