--- a/src/components/searchresult/jobitem/jobItem.module.css
+++ b/src/components/searchresult/jobitem/jobItem.module.css
@@ -1,6 +1,10 @@
 .wrapper {
   margin-top: 1.6rem;
-  border: 0px;
+  border: 0px !important;
+}
+
+.activeJob {
+  border: 1px solid var(--border-highlight, #0e8136) !important;
 }
 
 .jobCard {
