--- a/src/components/searchresult/joblisting/joblisting.module.css
+++ b/src/components/searchresult/joblisting/joblisting.module.css
@@ -18,21 +18,37 @@
   margin: 2.4rem 0;
 }
 
-.paginationContainer a {
+.fullPagination {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.smallPagination a {
+  border: 1px solid var(--bg-highlight, #0e8136);
+  background-color: var(--bg-highlight, #0e8136) !important;
+  color: var(--text-pop, #fff) !important;
+  height: 4.8rem;
+  font-size: 1.6rem;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  font-weight: 500;
+}
+.fullPagination a {
   color: var(--text-body, #1c1c1c);
   font-size: 1.6rem !important;
   text-wrap: nowrap;
   padding: 0.7rem 1.1rem;
 }
 
-.paginationContainer a:hover {
+.fullPagination a:hover {
   text-decoration: underline;
   color: inherit !important;
   border: 1px solid #dee2e6 !important;
   background-color: inherit !important;
 }
 
-.paginationContainer a:focus {
+.fullPagination a:focus {
   text-decoration: none;
   color: inherit !important;
   border: 1px solid #dee2e6 !important;
@@ -40,7 +56,7 @@
   box-shadow: none;
 }
 
-.paginationContainer span {
+.fullPagination span {
   font-size: 1.6rem !important;
 }
 
@@ -80,6 +96,41 @@
   font-weight: 500;
   background-color: var(--bg-highlight-light, #f2fdf7) !important;
   border-color: var(--border-highlight, #0e8136) !important;
+}
+
+.smallPagination {
+  width: 100%;
+}
+
+.smallPagination a:focus {
+  text-decoration: none;
+  color: var(--text-pop, #fff) !important;
+  background-color: var(--bg-highlight, #0e8136) !important;
+  box-shadow: none;
+}
+
+.smallPagination a:hover {
+  background-color: #15a449 !important;
+}
+
+@media only screen and (max-width: 1000px) {
+  .wrapper {
+    grid-template-columns: auto;
+  }
+
+  .jobList {
+    width: -webkit-fill-available;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .smallPagination {
+    display: block !important;
+  }
+
+  .fullPagination {
+    display: none;
+  }
 }
 
 * {
