--- a/src/components/searchresult/jobitem/jobItem.module.css
+++ b/src/components/searchresult/jobitem/jobItem.module.css
@@ -99,3 +99,9 @@
   justify-content: space-between;
   display: flex;
 }
+
+@media only screen and (max-width: 1000px) {
+  .activeJob {
+    border: 0px !important;
+  }
+}
