--- a/src/components/appnav/appnav.css
+++ b/src/components/appnav/appnav.css
@@ -1,10 +1,12 @@
 .header {
-  padding: 1.8rem 4rem;
+  padding: 1.8rem 3.2rem;
   margin-bottom: 1.5rem;
 }
 
 .nav-no-responsive {
   justify-content: space-between;
+  padding-left: 1.6rem !important;
+  padding-right: 1.6rem !important;
 }
 
 .logo-page-header {
@@ -18,7 +20,7 @@
 .nav-link {
   font-size: 1.4rem !important;
   color: black !important;
-  margin: 0 1.2rem;
+  margin: 0 0.8rem;
   display: flex !important;
   align-items: center;
   text-align: left;
@@ -49,7 +51,7 @@
   font-size: 1.4rem !important;
   border: none;
   background: none;
-  margin: 0 1.2rem;
+  margin: 0 0.5rem;
 }
 
 .login:hover {
@@ -103,11 +105,11 @@
 
   .category-title {
     font-size: 1.4rem;
-    margin-left: 3rem;
+    margin-left: 1.5rem;
     background-color: transparent;
     border: none;
     border-left: 1px solid #cfcfcf;
-    padding-left: 3rem;
+    padding-left: 1.5rem;
   }
 
   .category-title:hover {
