--- a/src/components/editsetting/index.css
+++ b/src/components/editsetting/index.css
@@ -1,9 +1,10 @@
 .editSetting{
     text-align: left;
-    margin: 0 2em;
-    width: 55%;
+    margin-left: 2em;
+    margin-bottom: 100px;
     border-bottom: solid .5px #dedede;
     border-top: solid .5px #dedede;
+    padding-bottom: 70px;
 }
 
 .titleEdit{
@@ -24,9 +25,10 @@
     border: solid .5px #0e8136;
 }
 
-label{
+.groupForm label{
     font-weight:lighter;
     font-size: 16px;
+    width: 100%;
 }
 .groupForm{
     margin-bottom: 1.2em;
