--- a/src/components/setting/index.css
+++ b/src/components/setting/index.css
@@ -1,10 +1,11 @@
 .contSetting{
     text-align: left;
-    margin: 0 2em;
-    width: 55%;
+    margin-left: 1.3em;
+    margin-bottom: 100px;
     border-bottom: solid .5px #dedede;
     border-top: solid .5px #dedede;
     font-size: 16px;
+    padding-bottom: 2em;
 }
 
 .titleSetting{
