--- a/src/components/myaccount/myaccount-style.css
+++ b/src/components/myaccount/myaccount-style.css
@@ -1,20 +1,13 @@
-.container {
+.account-page {
+  max-width: 1300px;
+  align-self: center;
+}
+
+.container-page {
   display: grid;
-  grid-template-columns: 0.75fr 1.5fr 0.9fr;
-  gap: 20px;
-  margin: 20px;
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    "Open Sans",
-    "Helvetica Neue",
-    sans-serif;
+  grid-template-columns: 0.75fr 2fr 1.2fr;
+  gap: 4rem;
+  margin-top: 20px;
 }
 
 .nav-item {
@@ -74,6 +67,7 @@
 .main-content {
   background-color: #fff;
   border: none;
+  width: 566px;
 }
 
 .main-content h3 {
@@ -82,7 +76,10 @@
 }
 
 @media only screen and (max-width: 1024px) {
-  .container {
+  .account-page{
+    width: 100%;
+  }
+  .container-page {
     grid-template-columns: 1fr;
     gap: 0;
     margin: 0;
@@ -104,12 +101,13 @@
 
   .sidebar .nav-link {
     flex-grow: 1;
-    padding: 8px 0;
     margin: 0;
     text-align: center;
     border: none;
     font-size: 16px;
     box-sizing: border-box;
+    padding: 8px 0 !important;
+    justify-content: center;
   }
 
   .sidebar-header {
@@ -120,6 +118,11 @@
     font-weight: bold;
     color: #0e8136;
   }
+
+  .main-content {
+    width: 100%;
+  }
+
 }
 
 @media only screen and (max-width: 480px) {
