--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,30 @@ body {
   font-family: "Noto Sans", sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 1.6rem;
+  line-height: 1.6;
+  background-color: #f0f0f0 !important;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+:root {
+  --bg-badge-default-jobcard-temp: #626262;
+  --bg-muted-3: #626262;
+  --text-body: #1c1c1c;
+  --text-badge-feature: #1c1c1c;
+  --text-muted: #626262;
 }
