--- a/src/components/appnav/appnav.css
+++ b/src/components/appnav/appnav.css
@@ -16,7 +16,7 @@
   display: flex !important;
   align-items: center;
   justify-content: space-between;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .nav-above-content .left-content {
@@ -30,7 +30,6 @@
 }
 
 .nav-above-content .left-content button {
-  color: transparent;
   background-color: transparent;
   border: none;
 }
@@ -78,7 +77,7 @@
   padding-right: 1.4rem;
 }
 
-.login {
+.right-content .login span {
   font-size: 1.3rem !important;
   font-weight: 300;
   color: white;
@@ -86,7 +85,7 @@
   background: none;
 }
 
-.login:hover {
+.login:hover span {
   text-decoration: underline;
 }
 
@@ -98,6 +97,7 @@
 @media screen and (max-width: 600px) {
   .nav-menu {
     justify-content: space-around;
+    padding: 0.1rem 3.6rem;
   }
 
   .nav-menu .nav-link {
