updating app-content

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.app-content {
+  min-height: calc(100vh - 160px);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column
+}
