--- a/src/components/jobtitle/index.css
+++ b/src/components/jobtitle/index.css
@@ -32,13 +32,10 @@
 }
 
 .job-title-desc {
-    font-family: "Noto Sans";
+    font-family: "Noto Sans", sans-serif;
     font-size: 16px;
     line-height: 24px;
     font-weight: 300;
     color: rgb(0, 0, 0);
-}
-
-.job-title-desc {
     white-space: pre-line;
 }
