--- a/src/components/worktime/index.css
+++ b/src/components/worktime/index.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    font-family: "Noto Sans";
+    font-family: "Noto Sans", sans-serif;
     font-size: 14px;
     line-height: 24px;
     font-weight: 300;
@@ -24,12 +24,8 @@
     margin-bottom: 1rem;
 }
 
-.work-time-button:first-child {
-    margin-right: 10px;
-}
-
 .work-time-button {
-    font-family: "Noto Sans";
+    font-family: "Noto Sans", sans-serif;
     border: 1px solid #dedede;
     background-color: white;
     cursor: pointer;
@@ -37,6 +33,10 @@
     border-radius: 8px;
     padding: 10px 24px;
     font-size: 16px;
+}
+
+.work-time-button:first-child {
+    margin-right: 10px;
 }
 
 .work-time-button:focus {
