--- a/src/components/searchresult/joblisting/joblisting.module.css
+++ b/src/components/searchresult/joblisting/joblisting.module.css
@@ -117,6 +117,8 @@
 @media only screen and (max-width: 1000px) {
   .wrapper {
     grid-template-columns: auto;
+    max-width: none !important;
+    width: 100% !important;
   }
 
   .jobList {
