update login page and fix some nav css

--- a/src/components/custominput/index.css
+++ b/src/components/custominput/index.css
@@ -34,7 +34,14 @@
   color: rgb(227 33 33);
   font-size: 1.4rem;
   font-weight: 300;
+  letter-spacing: -0.42px;
   margin-top: 0.25rem;
+  display: flex;
+  gap: 0.8rem;
+}
+
+.invalid-feedback-input span {
+  line-height: 1.6rem;
 }
 
 .is-invalid {
