--- a/src/components/appnav/appnav.css
+++ b/src/components/appnav/appnav.css
@@ -74,7 +74,6 @@
 .nav-menu .nav-link span {
   text-align: left;
   line-height: 1;
-  padding-right: 1.4rem;
 }
 
 .right-content .login span {
@@ -103,6 +102,10 @@
   .nav-menu .nav-link {
     flex-direction: column;
     gap: 0.4rem;
+  }
+
+  .nav-menu .nav-link span {
+    text-align: center;
   }
 
   .nav-below-content .nav-menu .nav-link {
