--- a/src/components/jobalerts/pages/CreateJobAlert.css
+++ b/src/components/jobalerts/pages/CreateJobAlert.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --color-border: #a4a4a4;
   --primary: #0e8136;
 }
@@ -7,7 +7,7 @@ body {
   font-weight: 400;
   line-height: 1.6;
   margin-top: 1.6rem;
-}
+} */
 
 #email-alert-management-page {
   margin-top: 0px;
