--- a/src/components/login/login-style.css
+++ b/src/components/login/login-style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     padding: 0;
     margin: 0;
     border: none;
@@ -6,237 +6,234 @@
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+} */
 
 .login-widget {
-    height: 610px;
-    width: 320px;
-    position: absolute;
-    right: 40px;
-    top: 74px;
-    background-color: #ffffff;
-    box-shadow: #a4a4a4 0px 24px 48px 0px;
-    color: #1c1c1c;
-    grid-area: auto;
-    line-height: 25.6px;
-    padding: 16px;
-    display: none;
-    z-index: 15;
+  height: 610px;
+  width: 320px;
+  position: absolute;
+  right: 40px;
+  top: 74px;
+  background-color: #ffffff;
+  box-shadow: #a4a4a4 0px 24px 48px 0px;
+  color: #1c1c1c;
+  grid-area: auto;
+  line-height: 25.6px;
+  padding: 16px;
+  display: none;
+  z-index: 15;
 }
 
-
 input.form-control {
-    background-position: right 12px center;
-    background-repeat: no-repeat;
-    padding: 12px 34px 12px 12px;
-    border: 1px solid #a4a4a4;
-    border-radius: 4px;
-    color: #1c1c1c;
-    font-size: 16px;
+  background-position: right 12px center;
+  background-repeat: no-repeat;
+  padding: 12px 34px 12px 12px;
+  border: 1px solid #a4a4a4;
+  border-radius: 4px;
+  color: #1c1c1c;
+  font-size: 16px;
 }
 
 input.form-control:focus {
-    border: 1px solid #15a449;
+  border: 1px solid #15a449;
 }
 
 input.form-control:focus::placeholder {
-    color: #c8c8c8;
+  color: #c8c8c8;
 }
 
 input.form-control.email {
-    background-image: url('https://assets.jora.com/assets/25b0a086639a545b60d2-3d3a6f98deb585be13d2b9f0c0773255faef8620006b2d8733881056b19ca499.svg');
+  background-image: url("https://assets.jora.com/assets/25b0a086639a545b60d2-3d3a6f98deb585be13d2b9f0c0773255faef8620006b2d8733881056b19ca499.svg");
 }
 
 input.form-control.password {
-    background-image: url('https://assets.jora.com/assets/43628f336fc86566dc51-96b8e4c9e7abf22a36821864a0db117cfd031ef9afd735a00d6cf5d51fcff00d.svg');
+  background-image: url("https://assets.jora.com/assets/43628f336fc86566dc51-96b8e4c9e7abf22a36821864a0db117cfd031ef9afd735a00d6cf5d51fcff00d.svg");
 }
 
 .login-title {
-    color: #1c1c1c;
-    font-weight: 700;
-    font-size: 16.8px;
-    line-height: 26.88px;
-    margin-bottom: 16px;
-    text-align: left;
+  color: #1c1c1c;
+  font-weight: 700;
+  font-size: 16.8px;
+  line-height: 26.88px;
+  margin-bottom: 16px;
+  text-align: left;
 }
 
 .form-group {
-    margin-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .rounded-button-primary {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    font-family: -apple-system, system-ui, sans-serif;
-    font-weight: 500;
-    border-radius: 4px;
-    padding: 1px 24px;
-    margin: 0px 0px 16px 0px;
-    border: none;
-    font-size: 16px;
-    text-align: center;
-    height: 48px;
-    width: 286px;
-    cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-family: -apple-system, system-ui, sans-serif;
+  font-weight: 500;
+  border-radius: 4px;
+  padding: 1px 24px;
+  margin: 0px 0px 16px 0px;
+  border: none;
+  font-size: 16px;
+  text-align: center;
+  height: 48px;
+  width: 286px;
+  cursor: pointer;
 }
 
 .btn-sign-up {
-    background-color: #0e8136;
-    color: #ffffff;
+  background-color: #0e8136;
+  color: #ffffff;
 }
 
 .btn-sign-up:hover {
-    background-color: #15a449;
+  background-color: #15a449;
 }
 
 .btn-forgot-pw {
-    color: #0e8136;
-    background-color: #ffffff;
-    border: 1px solid #0e8136 !important;
+  color: #0e8136;
+  background-color: #ffffff;
+  border: 1px solid #0e8136 !important;
 }
 
 .btn-forgot-pw:hover {
-    color: #15a449;
+  color: #15a449;
 }
 
 .privacy-statement {
-    color: #1c1c1c;
-    font-size: 11.2px;
-    line-height: 17.92px;
-    text-align: left;
-    margin: 8px 0;
+  color: #1c1c1c;
+  font-size: 11.2px;
+  line-height: 17.92px;
+  text-align: left;
+  margin: 8px 0;
 }
 
 .branded-links a {
-    text-decoration: none;
-    color: #15a449;
+  text-decoration: none;
+  color: #15a449;
 }
 
 .login-title.sign-up {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 .social-login-container {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    margin: 2.4rem 0;
-    text-align: center;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  margin: 2.4rem 0;
+  text-align: center;
 }
 
 .social-login-container a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .social-login-container a:hover {
-    text-decoration: underline;
-    text-decoration-color: #494949;
+  text-decoration: underline;
+  text-decoration-color: #494949;
 }
 
-.social-login-container>* {
-    flex: 1 1 25%;
-    padding: 0 .4rem;
+.social-login-container > * {
+  flex: 1 1 25%;
+  padding: 0 0.4rem;
 }
 
 .branded-links a:hover {
-    text-decoration: underline;
-    text-decoration-color: #15a449;
+  text-decoration: underline;
+  text-decoration-color: #15a449;
 }
 
 .heading-xsmall {
-    font-size: 1.4rem;
-    color: #494949;
+  font-size: 1.4rem;
+  color: #494949;
 }
 
 p {
-    color: #1c1c1c;
-    line-height: 25.6px;
-    font-size: 16px;
-    text-align: left;
-    margin-bottom: 2rem;
+  color: #1c1c1c;
+  line-height: 25.6px;
+  font-size: 16px;
+  text-align: left;
+  margin-bottom: 2rem;
 }
 
 .mb-24 {
-    margin-bottom: 24px !important;
+  margin-bottom: 24px !important;
 }
 
 /* Responsive styles */
 @media only screen and (min-width: 768px) and (max-width: 1199.98px) {
-    .login-container.custom-login-class {
-        width: 50%;
-    }
+  .login-container.custom-login-class {
+    width: 50%;
+  }
 }
 
 @media only screen and (min-width: 480.1px) and (max-width: 975px) {
+  .login-widget,
+  div.role-selection-container {
+    width: auto;
+    left: 0;
+    right: 0;
+    height: auto;
+    box-shadow: none;
+    position: relative;
+    top: 0;
+  }
 
-    .login-widget,
-    div.role-selection-container {
-        width: auto;
-        left: 0;
-        right: 0;
-        height: auto;
-        box-shadow: none;
-        position: relative;
-        top: 0;
-    }
+  .rounded-button-primary.btn-forgot-pw,
+  .rounded-button-primary.btn-sign-up {
+    width: 100%;
+  }
 
-    .rounded-button-primary.btn-forgot-pw,
-    .rounded-button-primary.btn-sign-up {
-        width: 100%;
-    }
-
-    .login-container.custom-login-class {
-        width: 95%;
-    }
+  .login-container.custom-login-class {
+    width: 95%;
+  }
 }
 
 @media only screen and (max-width: 480px) {
+  .login-widget,
+  div.role-selection-container {
+    width: auto;
+    right: 0;
+    left: 0;
+    top: 0;
+    height: auto;
+    box-shadow: none;
+  }
 
-    .login-widget,
-    div.role-selection-container {
-        width: auto;
-        right: 0;
-        left: 0;
-        top: 0;
-        height: auto;
-        box-shadow: none;
-    }
+  .rounded-button-primary.btn-forgot-pw,
+  .rounded-button-primary.btn-sign-up {
+    width: 100%;
+  }
 
-    .rounded-button-primary.btn-forgot-pw,
-    .rounded-button-primary.btn-sign-up {
-        width: 100%;
-    }
-
-    .login-container.custom-login-class {
-        width: 95%;
-    }
+  .login-container.custom-login-class {
+    width: 95%;
+  }
 }
 
 .custom-login-class {
-    width: 35%;
-    margin: auto;
+  width: 35%;
+  margin: auto;
 }
 
 .my-signin-button-class,
 .my-forgot-pw-button-class {
-    width: 100% !important;
+  width: 100% !important;
 }
 
 .role-selection-container {
-    position: absolute;
-    display: block;
-    z-index: 100;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 610px;
-    width: 320px;
-    background-color: #ffffff;
-    box-shadow: #a4a4a4 0px 24px 48px 0px;
-    color: #1c1c1c;
-    grid-area: auto;
-    line-height: 25.6px;
-    padding: 16px;
+  position: absolute;
+  display: block;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 610px;
+  width: 320px;
+  background-color: #ffffff;
+  box-shadow: #a4a4a4 0px 24px 48px 0px;
+  color: #1c1c1c;
+  grid-area: auto;
+  line-height: 25.6px;
+  padding: 16px;
 }
