--- a/src/pages/register/register-style.css
+++ b/src/pages/register/register-style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     padding: 0;
     margin: 0;
     border: none;
@@ -6,140 +6,140 @@
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+} */
 
 .register-widget {
-    height: 289px;
-    width: 550px;
-    margin: 64px auto;
-    color: #1c1c1c;
-    grid-area: auto;
-    line-height: 25.6px;
-    padding: 0 16px;
+  height: 289px;
+  width: 550px;
+  margin: 64px auto;
+  color: #1c1c1c;
+  grid-area: auto;
+  line-height: 25.6px;
+  padding: 0 16px;
 }
 
 .register-title {
-    color: #1c1c1c;
-    font-weight: 700;
-    font-size: 18.2px;
-    line-height: 29.12px;
-    margin: 0 0 16px;
-    text-align: left;
+  color: #1c1c1c;
+  font-weight: 700;
+  font-size: 18.2px;
+  line-height: 29.12px;
+  margin: 0 0 16px;
+  text-align: left;
 }
 
 input.form-control {
-    background-position: right 12px center;
-    background-repeat: no-repeat;
-    padding: 12px 34px 12px 12px;
-    border: 1px solid #a4a4a4;
-    border-radius: 4px;
-    color: #1c1c1c;
-    font-size: 16px;
+  background-position: right 12px center;
+  background-repeat: no-repeat;
+  padding: 12px 34px 12px 12px;
+  border: 1px solid #a4a4a4;
+  border-radius: 4px;
+  color: #1c1c1c;
+  font-size: 16px;
 }
 
 input.form-control:focus {
-    border: 1px solid #15a449;
+  border: 1px solid #15a449;
 }
 
 input.form-control:focus::placeholder {
-    color: #c8c8c8;
+  color: #c8c8c8;
 }
 
 input.form-control.email {
-    background-image: url('https://assets.jora.com/assets/25b0a086639a545b60d2-3d3a6f98deb585be13d2b9f0c0773255faef8620006b2d8733881056b19ca499.svg');
+  background-image: url("https://assets.jora.com/assets/25b0a086639a545b60d2-3d3a6f98deb585be13d2b9f0c0773255faef8620006b2d8733881056b19ca499.svg");
 }
 
 input.form-control.password {
-    background-image: url('https://assets.jora.com/assets/43628f336fc86566dc51-96b8e4c9e7abf22a36821864a0db117cfd031ef9afd735a00d6cf5d51fcff00d.svg');
+  background-image: url("https://assets.jora.com/assets/43628f336fc86566dc51-96b8e4c9e7abf22a36821864a0db117cfd031ef9afd735a00d6cf5d51fcff00d.svg");
 }
 
 .form-group {
-    margin-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .rounded-button-primary {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    font-family: -apple-system, system-ui, sans-serif;
-    font-weight: 500;
-    border-radius: 4px;
-    padding: 1px 24px;
-    margin: 0px 0px 16px 0px;
-    border: none;
-    font-size: 16px;
-    text-align: center;
-    height: 48px;
-    width: 286px;
-    cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-family: -apple-system, system-ui, sans-serif;
+  font-weight: 500;
+  border-radius: 4px;
+  padding: 1px 24px;
+  margin: 0px 0px 16px 0px;
+  border: none;
+  font-size: 16px;
+  text-align: center;
+  height: 48px;
+  width: 286px;
+  cursor: pointer;
 }
 
 .btn-sign-in {
-    background-color: #0e8136;
-    color: #ffffff;
-    width: 100%;
+  background-color: #0e8136;
+  color: #ffffff;
+  width: 100%;
 }
 
 .btn-sign-in:hover {
-    background-color: #15a449;
+  background-color: #15a449;
 }
 
 .privacy-statement {
-    color: #1c1c1c;
-    font-size: 11.2px;
-    line-height: 17.92px;
-    text-align: left;
-    margin: 8px 0;
+  color: #1c1c1c;
+  font-size: 11.2px;
+  line-height: 17.92px;
+  text-align: left;
+  margin: 8px 0;
 }
 
 .branded-links a {
-    text-decoration: none;
-    color: #15a449;
+  text-decoration: none;
+  color: #15a449;
 }
 
 div.invalid-feedback {
-    color: #e32121;
-    font-size: 14px;
-    text-align: left;
-    margin-top: 4px;
-    line-height: 22.4px;
+  color: #e32121;
+  font-size: 14px;
+  text-align: left;
+  margin-top: 4px;
+  line-height: 22.4px;
 }
 
 .is-invalid {
-    border-color: #e32121;
+  border-color: #e32121;
 }
 
 input.form-control.is-invalid {
-    border-color: #e32121;
+  border-color: #e32121;
 }
 
 input.form-control.is-valid {
-    border-color: #28a745;
+  border-color: #28a745;
 }
 
 input.form-control.error {
-    border: 1px solid #e32121;
-    box-shadow: 0 0 0 0.2rem rgba(255, 0, 0, 0.25);
+  border: 1px solid #e32121;
+  box-shadow: 0 0 0 0.2rem rgba(255, 0, 0, 0.25);
 }
 
 .invalid-message {
-    color: #e32121;
-    font-size: 14px;
-    padding-top: 5px;
+  color: #e32121;
+  font-size: 14px;
+  padding-top: 5px;
 }
 
 @media only screen and (max-width: 768px) {
-    div.register-widget {
-        width: 95%;
-        margin: 0 auto;
-        padding: 0;
-    }
+  div.register-widget {
+    width: 95%;
+    margin: 0 auto;
+    padding: 0;
+  }
 }
 
 @media only screen and (max-width: 480px) {
-    div.register-widget {
-        width: 95%;
-        margin: 0 auto;
-        padding: 0;
-    }
+  div.register-widget {
+    width: 95%;
+    margin: 0 auto;
+    padding: 0;
+  }
 }
