--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -30,7 +30,7 @@
 .content-info {
     text-align: left;
     width: 100%;
-    padding: 24px 32px 32px;
+    padding: 24px 16px 32px 32px;
     font-size: 16px;
     line-height: 24px;
     letter-spacing: -0.48px;
