--- a/src/components/myaccount/myaccount.css
+++ b/src/components/myaccount/myaccount.css
@@ -44,6 +44,11 @@
     justify-content: center;
 }
 
+.info-action-title {
+    color: black;
+    text-decoration: none;
+}
+
 .info-action-title:hover {
     text-decoration: underline;
 }
