--- a/src/pages/updateprofile/index.css
+++ b/src/pages/updateprofile/index.css
@@ -190,44 +190,6 @@ div.custom-dropdown.dropdown button {
     padding-top: 24px;
 }
 
-.rounded-button-primary {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 4px;
-    padding: 1px 24px;
-    margin: 0px 0px 16px 0px;
-    border: none;
-    text-align: center;
-    height: 48px;
-    width: 286px;
-    cursor: pointer;
-    font-size: 1.6rem;
-    font-weight: 400;
-    letter-spacing: -.04em;
-    line-height: normal;
-  }
-  
-  .btn-update {
-    background-color: #0e8136;
-    color: #ffffff;
-    width: 190.89px;
-    height: 50.2px;
-  }
-  
-  .btn-update:hover {
-    background-color: #15a449;
-  }
-  
-  .btn-cancel {
-    color: #0e8136;
-    background-color: #ffffff;
-    border: 1px solid #0e8136 !important;
-    margin-left: 16px;
-    width: 111.35px;
-    height: 50.2px;
-  }
-  
-  .btn-cancel:hover {
-    color: #15a449;
-  }
+.update-profile-submit{
+    margin-right: 2rem;
+}
