--- a/src/components/suggestioninfo/index.css
+++ b/src/components/suggestioninfo/index.css
@@ -10,6 +10,10 @@ p {
     padding: 16px;
 }
 
+.info {
+    background-color: rgb(255, 247, 225) !important;
+}
+
 .job-title-icon {
     align-items: stretch;
     background-color: rgba(0, 0, 0, 0);
@@ -33,7 +37,7 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-size: 16px;
+    font-size: 1.6rem !important;
     line-height: 24px;
     font-weight: 300;
     color: rgb(0, 0, 0);
@@ -41,9 +45,17 @@ p {
     text-align: left;
 }
 
+.job-title-texts p {
+    font-size: 1.6rem !important;
+    line-height: 24px;
+    font-weight: 300;
+    color: rgb(0, 0, 0);
+    font-family: "Noto Sans", sans-serif;
+}
+
 .job-title-desc {
     font-family: "Noto Sans", sans-serif;
-    font-size: 16px;
+    font-size: 1.6rem !important;
     line-height: 24px;
     font-weight: 300;
     color: rgb(0, 0, 0);
