--- a/src/components/customradio/index.css
+++ b/src/components/customradio/index.css
@@ -1,51 +1,49 @@
-
 .radio-label {
-    font-size: 1.5rem;
-    display: -webkit-inline-box;
-    cursor: pointer;
+  font-size: 1.5rem;
+  display: -webkit-inline-box;
+  cursor: pointer;
 }
 
-.radio-label p{
-    font-size: 1.4rem;
+.radio-label p {
+  font-size: 1.4rem;
 }
 
 .radio-label input[type="radio"] {
-    display: none;
+  display: none;
 }
 
 .radio-label input[type="radio"]:checked + span {
-    border: 2px solid rgb(21 164 73);
+  border: 1px solid rgb(21 164 73);
 }
-  
+
 .radio-label input[type="radio"]:checked + span:after {
-    opacity: 1;
+  opacity: 1;
 }
 
 .custom-radio {
-    left: 0px;
-    top: 4px;
-    cursor: pointer;
-    width: 17px;
-    height: 17px;
-    border: 1px solid rgb(53, 52, 52);
-    border-radius: 50%;
-    display: inline-block;
-    position: relative;
-    margin-right: 1rem;
+  left: 0px;
+  top: 4px;
+  cursor: pointer;
+  width: 17px;
+  height: 17px;
+  border: 1px solid rgb(128, 128, 128);
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  margin-right: 1rem;
 }
 
 /* for inner filled circle */
 .custom-radio::after {
-    content: '';
-    width: 8px;
-    height: 8px;
-    border: 1px solid rgb(21 164 73);
-    background: #0e8136;
-    position: absolute;
-    border-radius: 50%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 0;
-    transition: opacity 0.2s;
+  content: "";
+  width: 10px;
+  height: 10px;
+  background: #0e8136;
+  position: absolute;
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.2s;
 }
